Apply suggestions from code review

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -90,7 +90,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item On Starting and Far Map Tiles, players can only acquire basic Spells and Minor Artifacts.
   \item Players may not use Diplomacy to skip Level VII Combat.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, and gain 10 \svg{gold} for winning Combat.
-  \item Sanctuary effect: \textbf{once per Faction} +1 \svg{morale_positive} and draw 1 Card.
+  \item Sanctuary effect: \textbf{once per Faction} \mbox{+1 \svg{morale_positive}} and draw 1 Card.
   \item Obelisk effect: textbf{once per Faction} roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
   \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
@@ -99,11 +99,11 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item Receive: 10 \svg{gold}, 4 \svg{building_materials}, and 2 \svg{valuables}
     \item Roll 2 \svg{treasure} (reroll any XP) and 2 \svg{resource}
   \end{itemize}
-  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{gold} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2, AND draw from \svgunit{gold} until you get one Dragon.
+  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2, AND draw from \svgunit{golden} until you get one Dragon.
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost
-    \item Receive 15 \svg{gold} AND Search (3) any Artifact Deck.
+    \item Receive 15 \svg{gold} AND Search (3) any Artifact Deck
   \end{itemize}
 \end{itemize}
 
@@ -111,7 +111,7 @@ After visiting a Dragon Utopia, roll an Attack Die:
 \begin{itemize}
   \item[\textbf{-1}] -- Dragons' Curse: The defeated Dragons’ spirits curse the land! All players lose 1 \svgeven{movement} for the next Round.
   \item[\textbf{0}] -- Dragons' Revenge: All players must sacrifice one Unit before the end of the Round; that Unit's health is reduced to 0. 
-  \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately lose 1 \svgeven{movement} to Search (2) the Artifact Deck.
+  \item[ \textbf{+1}] -- Scattered Treasure: All players may immediately spend \mbox{1 \svgeven{movement}} to Search (2) the Artifact Deck.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Suggested Houserules}}
