fixed map pngs and edited the scenario tex file

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -1,11 +1,9 @@
 % !TeX spellcheck = en_US
-\addscenariosection{1}{Clash Scenario}{Dragon Valley}{\images/slayer.png}
+\addscenariosection{1}{Clash Scenario}{Dragon Valley}{\images/dragon.png}
 
 \begin{multicols*}{2}
 
 \textbf{Author:} LAAMAKALA
-
-\textbf{Source:} \href{https://discord.com/channels/740870068178649108/1239631918643941509}{Archon Studios Discord}
 
 %\textit{A valley where ancient dragons protect secrets long forgotten. Fight for power, claim the land, or perish like those before you.}
 
@@ -97,7 +95,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item On Starting and Far Map Tiles, players can only acquire basic Spells and Minor Artifacts.
   \item Players may not use Diplomacy to skip Level VII Combat.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, and gain 10 \svg{gold} for winning a Level VII Combat.
-  \item Sanctuary effect: \textbf{once per Faction} \mbox{+1 \svg{morale_positive}} and draw 1 Card.
+  \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
   \item Obelisk effect: \textbf{once per Faction} roll one \svg{resource} and draw one Card.
   \item When fighting a Neutral Combat, a player may add +1 difficulty for an extra 5 \svg{gold} + Search (2) the Artifact or the Spell Deck.
   \item Settlements on Center (VI-VII) Map Tiles are treated as two Settlements in terms of rewards AND allow rolling one \svg{resource} or \svg{treasure} (reroll any XP).
