minor changes to .tex

--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -13,7 +13,7 @@
 
 \subsection*{\MakeUppercase{Scenario Length}}
 This Scenario plays out over 13 Rounds 
-%(or a shorter version over 8 Rounds).
+%(or a shorter version over 9 Rounds).
 
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
@@ -60,7 +60,7 @@ The game ends at the end of the Round when any of these conditions are met:
 \begin{itemize}
  \item One player has defeated all other players' Main Heroes once - \textit{That player wins the game immediately.}
  \item One player conquers both Dragon Utopias - \textit{That player wins the game immediately.}
- \item At the end of Round 13 (or Round 8 for the shorter game).
+ \item At the end of Round 13 (or Round 9 for the shorter game).
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Points}}
@@ -104,7 +104,7 @@ If no player has achieved an immediate victory, the player with the most Victory
     \item Receive: 10 \svg{gold}, 4 \svg{building_materials}, and 2 \svg{valuables}.
     \item Roll 2 \svg{treasure} (reroll any XP) and 2 \svg{resource}.
   \end{itemize}
-  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2, AND draw from \svgunit{golden} until you get one Dragon.
+  \item When visiting a Dragon Utopia: Reshuffle the \svgunit{golden} and \svgunit{azure} Decks, then draw from \svgunit{azure} until you get 3 Dragons and choose 2 (3 on impossible difficulty), AND draw from \svgunit{golden} until you get one Dragon.
   \item Upon flagging Dragon Utopia, \textbf{choose one} and then put a Black Cube:
   \begin{itemize}
     \item Recruit one of the defeated Dragons for half its \svg{gold} (rounded down) and its \svg{valuables} cost.
@@ -149,5 +149,5 @@ After visiting a Dragon Utopia, roll an Attack Die:
   \node at (4.5, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER SCENARIO}}}};
   % 4-player short
   \node at (12.1, -15) {\includegraphics[scale=0.165]{\maps/dragon-valley-4p-short.png}};
-  \node at (12.1, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 8 ROUND SCENARIO}}}};
+  \node at (12.1, -20) {\footnotesize{\textbf{\MakeUppercase{4-PLAYER 9 ROUND SCENARIO}}}};
 \end{tikzpicture}
