--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -18,7 +18,7 @@ This Scenario plays out over 13 Rounds
 \subsection*{\MakeUppercase{Player Setup}}
 \textbf{Player Count:} 2 -- 4
 
-\textbf{Starting Resources:} 15 \svg{gold}, 4 \svg{building_materials}, 2 \svg{valuables}
+\textbf{Starting Resources:} 14 \svg{gold}, 4 \svg{building_materials}, 1 \svg{valuables}
 
 \textbf{Starting Income:} 10 \svg{gold}, 0 \svg{building_materials}, 0 \svg{valuables}
 
@@ -31,7 +31,7 @@ This Scenario plays out over 13 Rounds
 \textbf{Town Buildings:}
 \begin{itemize}
   \item \svgunit{bronze} Dwelling
-  \item Each player may build the \textit{Mage Guild} or a \textit{Faction-specific} building with a discount of 10 \svg{gold} (trading post conversion chart may be used for the discount).
+  \item Each player may build the the \textit{Faction-specific} building with a discount of 4 \svg{gold} and 2 \svg{building_materials}.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Map Setup}}
@@ -59,7 +59,7 @@ The game ends at the end of the Round when any of these conditions are met:
 
 \begin{itemize}
  \item One player has defeated all other players' Main Heroes once - \textit{That player wins the game immediately.}
- \item One player conquers both Dragon Utopias - \textit{That player wins the game immediately.}
+ \item One player conquers both Dragon Utopias %- \textit{That player wins the game immediately.}
  \item At the end of Round 13 (or Round 9 for the shorter game).
 \end{itemize}
 
