--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -93,7 +93,7 @@ If no player has achieved an immediate victory, the player with the most Victory
   \item Create separate Decks for Minor, Major, and Relic Artifacts.
   \item Create separate Decks for Basic and Expert Spells.
   \item On Starting and Far Map Tiles, players can only acquire basic Spells and Minor Artifacts.
-  \item Players may not use Diplomacy to skip Level VII Combat.
+  \item Level VII Neutral fights cannot be skipped.
   \item If your Hero is Level VII, treat Level VI neutrals as Level VII, and gain 10 \svg{gold} for winning a Level VII Combat.
   \item Sanctuary effect: \textbf{once per Faction} gain a \svg{morale_positive} token and draw 1 Card.
   \item Obelisk effect: \textbf{once per Faction} roll one \svg{resource} and draw one Card.
