--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -90,7 +90,7 @@ These removed Cards will be available at specific locations throughout the Scena
   \item Certain locations have special rules, typically allowing players to acquire resource-generating Cards - refer to the table below.
   \item A Main Hero carrying the Grail Token is not protected by the \textit{Sanctuary} effect.
   \item The Surrendering cost for a Main Hero carrying the Grail Token is increased to 30 \svg{gold}.
-  \item When defeating an enemy Main Hero, the victorious player may, instead of taking 5 \svg{gold}, choose to take either the Grail Token or one Artifact from the opponent's Discard Pile.
+  \item When defeating an enemy Main Hero, the victorious player may, instead of taking \mbox{5 \svg{gold}}, choose to take either the Grail Token or one Artifact from the opponent's Discard Pile.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Victory Conditions}}  
