--- a/draft-scenarios/clash/gold_rush.tex
+++ b/draft-scenarios/clash/gold_rush.tex
@@ -51,7 +51,7 @@ Remove the following Cards from their respective Decks and organize them into 5 
   \item \textit{Estates} Ability Card
   \item Resource-generating Spell Cards (\textit{View Air} and any similar Spells)
   \item All \textit{Statue of Legion} Artifact pieces (\textit{X of Legion} Artifacts)
-  \item \textit{Obelisk Pile}: remaining non-Relic Artifacts that grant resources (including those with one of the options) and have no ongoing effect
+  \item \textit{Obelisk Pile}: remaining non-Relic Artifacts that grant resources (including those with one of the options) and have no \svg{permanent} effect
   \item \textit{Remaining Artifacts}: remaining Artifacts that grant resources 
 \end{enumerate}
   
