--- a/draft-scenarios/clash/dragon_valley.tex
+++ b/draft-scenarios/clash/dragon_valley.tex
@@ -79,11 +79,11 @@ If no player has achieved an immediate victory, the player with the most Victory
 \subsection*{\MakeUppercase{Timed Events}}
 
 \begin{itemize}
-  \item Start of \textbf{\nth{1} Round:} All Heroes gain +1 \svgeven{movement}.
-  \item Start of \textbf{\nth{4} Round:} Remove black Cubes from all locations that give resources, morale or Cards (not from Grail).
-  \item Start of \textbf{\nth{8} Round:} Repeat event of Round 4.
-  \item Start of \textbf{\nth{9} Round:} Repeat event of Round 1.
-  \item End of \textbf{\nth{10} Round:} Player(s) with lowest XP roll 2 \svg{resource} dice.
+  \item[\textbf{\nth{1}}] \textbf{Round:} All Heroes gain +1 \svgeven{movement}.
+  \item[\textbf{\nth{4}}] \textbf{Round:} Remove Black Cubes from all locations that give Resources, Morale or Cards (but not from the Grail).
+  \item[\textbf{\nth{8}}] \textbf{Round:} Repeat event of Round 4.
+  \item[\textbf{\nth{9}}] \textbf{Round:} Repeat event of Round 1.
+  \item[\textbf{End}] \textbf{of \nth{10} Round:} Player(s) with lowest XP roll 2 \svg{resource} dice.
 \end{itemize}
 
 \subsection*{\MakeUppercase{Additional Rules}}
